--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,7 @@ SET(PICOQUIC_LIBRARY_FILES
         picoquic/michelfralloc/michelfralloc.c
         picoquic/michelfralloc/michelfralloc.h
     picoquic/cc_common.c picoquic/cc_common.h picoquic/bbr.c
+    picoquic/nocc.c
     picoquic/gf256/gf256.c)
 
 SET(PICOQUIC_TEST_LIBRARY_FILES
